--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "fcm-notification": "^2.0.0",
     "firebase-admin": "^11.5.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "socket.io": "^4.6.1"
   },
