--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
