--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "fcm-notification": "^2.0.0",
     "firebase-admin": "^11.5.0",
+    "google-auth-library": "^8.8.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "node-cron": "^3.0.2",
