--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "swagger-autogen": "node swagger/swagger.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "swagger-autogen": "^2.23.3"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -23,7 +25,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "node-cron": "^3.0.2",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "swagger-ui-express": "^4.6.3"
   },
   "repository": {
     "type": "git",
